--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -26,7 +26,7 @@
 
 >**注意**
 >
->若使用 pkg 安装，请另行安装 `databases/php84-pgsql`，php 版本须同
+>若使用 pkg 安装，请另行安装 `databases/php83-pdo_pgsql`，php 版本须同
  
 ```sh
 # pkg install postgresql16-server
@@ -42,7 +42,47 @@
 配置:
 
 ```sh
-# sysrc postgresql_enable=YES
+root@ykla:~ # service postgresql enable
+postgresql enabled in /etc/rc.conf
+```
+
+初始化数据库
+
+```sh
+root@ykla:~ # service postgresql initdb
+The files belonging to this database system will be owned by user "postgres".
+This user must also own the server process.
+
+The database cluster will be initialized with this locale configuration:
+  provider:    libc
+  LC_COLLATE:  C
+  LC_CTYPE:    C.UTF-8
+  LC_MESSAGES: C.UTF-8
+  LC_MONETARY: C.UTF-8
+  LC_NUMERIC:  C.UTF-8
+  LC_TIME:     C.UTF-8
+The default text search configuration will be set to "english".
+
+Data page checksums are disabled.
+
+creating directory /var/db/postgres/data16 ... ok
+creating subdirectories ... ok
+selecting dynamic shared memory implementation ... posix
+selecting default max_connections ... 100
+selecting default shared_buffers ... 128MB
+selecting default time zone ... PRC
+creating configuration files ... ok
+running bootstrap script ... ok
+performing post-bootstrap initialization ... ok
+syncing data to disk ... ok
+
+initdb: warning: enabling "trust" authentication for local connections
+initdb: hint: You can change this by editing pg_hba.conf or using the option -A, or --auth-local and --auth-host, the next time you run initdb.
+
+Success. You can now start the database server using:
+
+    /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start
+
 ```
 
 ```sql
@@ -51,7 +91,7 @@ $ /usr/local/bin/pg_ctl -D /var/db/postgres/data16/ -l logfile start # 初始化
 waiting for server to start.... done
 server started
 $ psql -Upostgres # 进入命令模式
-psql (16.4)
+psql (16.7)
 Type "help" for help.
 
 postgres=# create user nextcloud; # 创建所需用户
@@ -81,18 +121,24 @@ postgres-# \q # 退出，注意斜杠要输入：\
 注意版本可以通过 `php -v` 命令判断，必须一致：
 
 ```sh
-root@ykla:/usr/ports/www/nextcloud # php -v
-PHP 8.2.25 (cli) (built: Nov  1 2024 13:10:16) (NTS)
+root@ykla:~ # php -v
+PHP 8.4.4 (cli) (built: Feb 15 2025 01:05:08) (NTS)
 Copyright (c) The PHP Group
-Zend Engine v4.2.25, Copyright (c) Zend Technologies
-    with Zend OPcache v8.2.25, Copyright (c), by Zend Technologies
-root@ykla:/usr/ports/www/nextcloud # 
+Zend Engine v4.4.4, Copyright (c) Zend Technologies
+    with Zend OPcache v8.4.4, Copyright (c), by Zend Technologies
 ```
 
 ```sh
-# pkg install mod_php82
+# pkg install mod_php83
 ```
-## 安装 Apache
+
+```
+# service php_fpm enable
+# service php_fpm start
+```
+
+
+## 基于 Apache
 
 ```sh
 # pkg install apache24
@@ -108,15 +154,16 @@ root@ykla:/usr/ports/www/nextcloud #
 配置服务：
 
 ```sh
-# sysrc apache24_enable=yes
+# service apache24 enable
 ```
 
-## 查看 Apache 配置方法
+### 查看 Apache 配置方法
 
 
 ```sh
-root@ykla:/usr/ports/www/nextcloud # pkg info -D mod_php82
-mod_php82-8.2.25:
+root@ykla:/usr/ports/www/nextcloud # pkg info -D mod_php83
+root@ykla:~ # pkg info -D mod_php83
+mod_php83-8.4.4_1:
 On install:
 ******************************************************************************
 
@@ -145,8 +192,8 @@ You should add the following to your Apache configuration file:
 ```
 
 ```sh
-root@ykla:/usr/ports/www/nextcloud # pkg info -D nextcloud-php82
-nextcloud-php82-30.0.1:
+root@ykla:~ # pkg info -D nextcloud-php83
+nextcloud-php83-30.0.6:
 On install:
 /!\ The FreeBSD package REQUIRES the apps_paths configuration as    /!\
 /!\ seen in config/config.sample.php to function                    /!\
@@ -171,7 +218,7 @@ options are available in
 	/usr/local/www/nextcloud/config/config.php
 
 You can find annotated configuration options in config.documented.php
-in the same directory. Nextcloud's configuration documentation is at 
+in the same directory. Nextcloud's configuration documentation is at
 
 	https://docs.nextcloud.com/server/stable/admin_manual/configuration_server
 
@@ -217,9 +264,88 @@ Alias /nextcloud /usr/local/www/nextcloud
 # service apache24 start
 ```
 
+## 基于 Nginx
+
+安装
+
+```
+# pkg install nginx
+```
+
+或
+
+```
+# cd /usr/ports/www/nginx/ 
+# make install clean
+```
+
+编辑 `/usr/local/etc/nginx/nginx.conf`，修改如下：
+
+```ini
+worker_processes  1;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        # 如果请求 /nextcloud 没有尾部斜杠，重定向到 /nextcloud/
+        location = /nextcloud {
+            return 301 /nextcloud/;
+        }
+
+        # 使用 alias 映射 /nextcloud/ 到实际目录 /usr/local/www/nextcloud/
+        location /nextcloud/ {
+            alias /usr/local/www/nextcloud/;
+            index index.php index.html;
+            # 尝试直接访问文件或目录，找不到时交由 @nextcloud 处理
+            try_files $uri $uri/ @nextcloud;
+        }
+
+        # fallback location，用于将所有请求转发到 index.php
+        location @nextcloud {
+            rewrite ^/nextcloud/(.*)$ /nextcloud/index.php?$1 last;
+        }
+
+        # PHP 文件处理
+        location ~ ^/nextcloud/(.+\.php)$ {
+            alias /usr/local/www/nextcloud/$1;
+            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /usr/local/www/nextcloud/$1;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            fastcgi_pass 127.0.0.1:9000;
+        }
+
+        # PHPS 文件处理，直接以纯文本显示源代码
+        location ~ ^/nextcloud/(.+\.phps)$ {
+            alias /usr/local/www/nextcloud/$1;
+            default_type text/plain;
+        }
+    }
+}
+```
+
+启动服务：
+
+```sh
+# service nginx enable
+# service nginx start
+```
+
 ## 启动
 
-`http://ip:nextcloud/` 即可。请把 `ip` 替换成你的局域网 ip。
+`http://ip/nextcloud` 即可。请把 `ip` 替换成你的局域网 ip。
 
 ![nextcloud FreeBSD 安装界面](../.gitbook/assets/nextclould1.png)
 
@@ -236,12 +362,12 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 ## 在 nextcloud 中挂载 samba 共享
 
-### 安装模块 `php82-pecl-smbclient`
+### 安装模块 `php83-pecl-smbclient`
 
 在 nextcloud 服务器端：
 
 ```sh
-# pkg install php82-pecl-smbclient
+# pkg install php83-pecl-smbclient
 ```
 
 或者 
