--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -245,10 +245,10 @@ files = /usr/local/etc/onlyoffice/documentserver/supervisor/*.conf
 
 ```
 root@ykla:~ # documentserver-update-securelink.sh
-ds:docservice: ERROR (no such process)
-ds:docservice: ERROR (no such process)
-ds:converter: ERROR (no such process)
-ds:converter: ERROR (no such process)
+ds:docservice: stopped
+ds:docservice: started
+ds:converter: stopped
+ds:converter: started
 Performing sanity check on nginx configuration:
 nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
 nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
