--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -1,5 +1,7 @@
 # 第 17.14 节 OnlyOffice（基于 PostgreSQL）
 
+首先在其他机器上安装 nextcloud。
+
 ## 安装
 
 ```sh
@@ -229,6 +231,66 @@ Current node details:
  * Erlang cookie hash: mmhdcv/DKEfjrCrCEaZMvQ==
 ```
 
+onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段加入 `/usr/local/etc/onlyoffice/documentserver/local.json`：
+
+```
+  "request-filtering-agent" : {
+				"allowPrivateIPAddress": true,
+				"allowMetaIPAddress": true
+			},
+```
+
+即：
+
+```
+{
+  "services": {
+    "CoAuthoring": {
+      "sql": {
+        "type": "postgres",
+        "dbHost": "localhost",
+        "dbPort": "5432",
+        "dbName": "onlyoffice",
+        "dbUser": "onlyoffice",
+        "dbPass": "onlyoffice"
+      },
+  "request-filtering-agent" : {
+				"allowPrivateIPAddress": true,
+				"allowMetaIPAddress": true
+			},
+      "token": {
+        "enable": {
+          "request": {
+            "inbox": false,
+            "outbox": false
+          },
+          "browser": false
+
+……省略……
+```
+
+编辑 `/usr/local/etc/nginx/nginx.conf`
+
+把
+
+```
+include /usr/local/etc/onlyoffice/documentserver/nginx/ds.conf;
+```
+
+放到 http 的括号里：
+
+示例：
+
+```
+……省略……
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    include /usr/local/etc/onlyoffice/documentserver/nginx/ds.conf;
+
+……省略……
+```
+
 编辑 `/usr/local/etc/supervisord.conf`，翻到最底下，找到 `;[include]`，并删去前面的分号：
 
 即：
@@ -237,7 +299,7 @@ Current node details:
 [include]
 ;files = relative/directory/*.ini
 files = /usr/local/etc/onlyoffice/documentserver/supervisor/*.conf
-``
+```
 
 ```sh
 # service supervisord start
@@ -253,3 +315,32 @@ Performing sanity check on nginx configuration:
 nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
 nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 ```
+
+直接打开 IP 地址，应如下图所示：
+
+![Document Server is running](../.gitbook/assets/documentserver2.png)
+
+打开 NextCloud:
+
+安装 onlyoffice 插件，可以直接访问 `ip/nextcloud/index.php/settings/apps/office/onlyoffice`：
+
+![onlyoffice](../.gitbook/assets/documentserver2.png)
+
+点击头像——>管理设置，找到 onlyoffice，设置如下（注意看看那个密钥是不是真的为空)
+
+![onlyoffice](../.gitbook/assets/documentserver3.png)
+
+随便预览几个文件：
+
+![onlyoffice](../.gitbook/assets/documentserver4.png)
+
+![onlyoffice](../.gitbook/assets/documentserver5.png)
+
+
+## 参考文献
+
+- [How to allow Private IP to access onlyOffice documentServer?](https://forum.onlyoffice.com/t/how-to-allow-private-ip-to-access-onlyoffice-documentserver/5755/2)
+
+## 故障排除
+
+可以看日志 `cat /var/log/onlyoffice/documentserver/converter/out.log`。
