--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -107,13 +107,16 @@ you need to update the database schema:
     mysql -u onlyoffice -D onlyoffice -p < /usr/local/www/onlyoffice/documentserver/server/schema/mysql/upgrade/upgradev720.sql
 ```
 
-## 配置
+
+## 配置服务
 
 ```
 # service nginx enable
 # service rabbitmq enable
 # service supervisord enable
 ```
+
+## 配置数据库
 
 ```
 # pkg install postgresql16-server
@@ -127,12 +130,16 @@ you need to update the database schema:
 # psql -hlocalhost -Uonlyoffice -d onlyoffice -f /usr/local/www/onlyoffice/documentserver/server/schema/postgresql/createdb.sql
 ```
 
+## 配置 rabbitmq
+
+开启服务：
+
 ```sh
 # service rabbitmq start
 ```
 
 ```sh
-# rabbitmqctl --erlang-cookie `cat /var/db/rabbitmq/.erlang.cookie` add_user onlyoffice z  # 注意：z 为我设置的密码，会卡几分钟
+# rabbitmqctl --erlang-cookie `cat /var/db/rabbitmq/.erlang.cookie` add_user onlyoffice password  # 注意：会卡几分钟，下同
 
 Error: unable to perform an operation on node 'rabbit@ykla'. Please see diagnostics information and suggestions below.
 
@@ -230,6 +237,7 @@ Current node details:
  * effective user's home directory: /root
  * Erlang cookie hash: mmhdcv/DKEfjrCrCEaZMvQ==
 ```
+## 允许局域网访问
 
 onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段加入 `/usr/local/etc/onlyoffice/documentserver/local.json`：
 
@@ -269,6 +277,8 @@ onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段
 ……省略……
 ```
 
+## 配置 nginx
+
 编辑 `/usr/local/etc/nginx/nginx.conf`
 
 把
@@ -291,6 +301,8 @@ http {
 ……省略……
 ```
 
+## 配置 supervisord
+
 编辑 `/usr/local/etc/supervisord.conf`，翻到最底下，找到 `;[include]`，并删去前面的分号：
 
 即：
@@ -304,6 +316,8 @@ files = /usr/local/etc/onlyoffice/documentserver/supervisor/*.conf
 ```sh
 # service supervisord start
 ```
+
+## 启动文档
 
 ```
 root@ykla:~ # documentserver-update-securelink.sh
@@ -320,6 +334,8 @@ nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 
 ![Document Server is running](../.gitbook/assets/documentserver2.png)
 
+## 配置 NextCloud
+
 打开 NextCloud:
 
 安装 onlyoffice 插件，可以直接访问 `ip/nextcloud/index.php/settings/apps/office/onlyoffice`：
@@ -329,6 +345,8 @@ nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 点击头像——>管理设置，找到 onlyoffice，设置如下（注意看看那个密钥是不是真的为空)
 
 ![onlyoffice](../.gitbook/assets/documentserver3.png)
+
+## 完成
 
 随便预览几个文件：
 
