--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -354,6 +354,7 @@ nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 
 ![onlyoffice](../.gitbook/assets/documentserver5.png)
 
+![onlyoffice](../.gitbook/assets/documentserver6.png)
 
 ## 参考文献
 
