--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -110,7 +110,7 @@ you need to update the database schema:
 
 ## 配置服务
 
-```
+```sh
 # service nginx enable
 # service rabbitmq enable
 # service supervisord enable
@@ -118,7 +118,7 @@ you need to update the database schema:
 
 ## 配置数据库
 
-```
+```sh
 # pkg install postgresql16-server
 # service postgresql enable
 # service postgresql initdb
@@ -137,6 +137,8 @@ you need to update the database schema:
 ```sh
 # service rabbitmq start
 ```
+
+第一步：
 
 ```sh
 # rabbitmqctl --erlang-cookie `cat /var/db/rabbitmq/.erlang.cookie` add_user onlyoffice password  # 注意：会卡几分钟，下同
@@ -172,6 +174,8 @@ Current node details:
  * Erlang cookie hash: mmhdcv/DKEfjrCrCEaZMvQ==
 ```
 
+第二步：
+
 ```sh
 # rabbitmqctl --erlang-cookie `cat /var/db/rabbitmq/.erlang.cookie` set_user_tags onlyoffice administrator
 Error: unable to perform an operation on node 'rabbit@ykla'. Please see diagnostics information and suggestions below.
@@ -204,6 +208,8 @@ Current node details:
  * effective user's home directory: /root
  * Erlang cookie hash: mmhdcv/DKEfjrCrCEaZMvQ==
 ```
+
+第三步：
 
 ```sh
 root@ykla:~ #  rabbitmqctl --erlang-cookie `cat /var/db/rabbitmq/.erlang.cookie` set_permissions -p / onlyoffice ".*" ".*" ".*"
@@ -241,7 +247,7 @@ Current node details:
 
 onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段加入 `/usr/local/etc/onlyoffice/documentserver/local.json`：
 
-```
+```ini
   "request-filtering-agent" : {
 				"allowPrivateIPAddress": true,
 				"allowMetaIPAddress": true
@@ -250,7 +256,7 @@ onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段
 
 即：
 
-```
+```ini
 {
   "services": {
     "CoAuthoring": {
@@ -283,7 +289,7 @@ onlyoffice 默认的配置，不允许私有地址访问。故需将以下片段
 
 把
 
-```
+```ini
 include /usr/local/etc/onlyoffice/documentserver/nginx/ds.conf;
 ```
 
@@ -291,7 +297,7 @@ include /usr/local/etc/onlyoffice/documentserver/nginx/ds.conf;
 
 示例：
 
-```
+```ini
 ……省略……
 http {
     include       mime.types;
@@ -307,7 +313,7 @@ http {
 
 即：
 
-```
+```ini
 [include]
 ;files = relative/directory/*.ini
 files = /usr/local/etc/onlyoffice/documentserver/supervisor/*.conf
@@ -319,7 +325,7 @@ files = /usr/local/etc/onlyoffice/documentserver/supervisor/*.conf
 
 ## 启动文档
 
-```
+```sh
 root@ykla:~ # documentserver-update-securelink.sh
 ds:docservice: stopped
 ds:docservice: started
