--- a/di-27-zhang-netbsd/di-27.0-jie-gai-shu.md
+++ b/di-27-zhang-netbsd/di-27.0-jie-gai-shu.md
@@ -1,5 +1,7 @@
 # 第 27.0 节 概述
 
+如果您想捐赠 NetBSD：[Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联。Google Pay 等多种支付方式。
+
 NetBSD 支持多个架构。使用如此极客的一款操作系统对于用户来说却是一件非常困难的事情，用户几乎也全都是开发者，而开发者也几乎构成了所有的用户。
 
 NetBSD 有 Linux 兼容层。
