--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -191,7 +191,7 @@ ServerActive=127.0.0.1
 Zabbix 前端配置文件模板位于 `/usr/local/www/zabbix7/conf/zabbix.conf.php.example`。
 
 ```sh
-# cp /usr/local/www/zabbix7/conf/zabbix.conf.php.example usr/local/www/zabbix7/conf/zabbix.conf.php
+# cp /usr/local/www/zabbix7/conf/zabbix.conf.php.example /usr/local/www/zabbix7/conf/zabbix.conf.php
 ```
 
 将
@@ -219,5 +219,36 @@ $DB['PASSWORD']                 = 'z';  # 这里是你的密码
 ### 配置 nginx
 
 编辑 `/usr/local/etc/nginx/nginx.conf`，
+
+```ini
+worker_processes 1;
+events {
+  worker_connections 1024;
+}
+http {
+  include             mime.types;
+  default_type        application/octet-stream;
+  sendfile            on;
+  keepalive_timeout   65;
+  server {
+    listen            80;
+    server_name       localhost;
+    root /usr/local/www/zabbix7;
+    index index.php index.html index.htm;
+    location / {
+      try_files $uri $uri/ =404;
+    }
+    location ~ .php$ {
+      fastcgi_split_path_info ^(.+\.php)(/.+)$;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_path_info;
+      fastcgi_param REMOTE_USER $remote_user;
+      fastcgi_pass unix:/var/run/php-fpm.sock;
+      fastcgi_index index.php;
+      include fastcgi_params;
+    }
+
+}}
+```
 
 
