--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -82,14 +82,14 @@ zabbix7-frontend 是 web 控制前端。
 注意 PHP 版本：
 
 ```
-# pkg ins php84-pdo_pgsql
+# pkg ins php84-pdo_pgsql php84-pgsql
 ```
 
 或
 
 ```
-# cd /usr/ports/databases/php84-pdo_pgsql/ 
-# make install clean
+# cd /usr/ports/databases/php84-pdo_pgsql/ && make install clean
+# cd /usr/ports/databases/php84-pgsql/ && make install clean
 ```
 
 
