--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -138,7 +138,7 @@ zabbix7-agent 负责数据采集，安装在被监控的服务器上。
 # su - postgres # 切换到数据库用户
 $ /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start # 初始化服务
 $ cd /usr/local/share/zabbix7/server/database/postgresql/
-$ psql -d template1 # 切换到此数据库
+$ psql 
 psql (16.8)
 Type "help" for help.
 
@@ -146,10 +146,22 @@ template1=# create database zabbix; # 创建 zabbix 数据库
 CREATE DATABASE
 template1=# CREATE USER zabbix WITH PASSWORD 'z'; # 此处设置用户 zabbix 密码为 z
 CREATE ROLE
-template1'# GRANT ALL PRIVILEGES ON DATABASE zabbix TO zabbix; # 在授予用户 zabbix 对 zabbix 数据库有所有权限
+postgres=# GRANT USAGE, CREATE on SCHEMA PUBLIC to zabbix;
 GRANT
-template1=# psql -U zabbix zabbix # 使用用户账户 zabbix 登录到数据库 zabbix
-template1-# \i schema.sql # 导入数据库，下同
+postgres=# GRANT ALL PRIVILEGES ON DATABASE zabbix TO zabbix; # 在授予用户 zabbix 对 zabbix 数据库有所有权限
+GRANT
+postgres=# grant all on database zabbix to zabbix; #  授权
+GRANT
+postgres=# ALTER DATABASE zabbix owner to zabbix; #  授权
+ALTER DATABASE
+postgres=# \q
+```
+
+必须退出再继续：
+
+```
+$ psql -U zabbix zabbix # 使用用户账户 zabbix 登录到数据库 zabbix
+$ zabbix=> \i schema.sql # 导入数据库，下同
 CREATE TABLE
 CREATE INDEX
 CREATE TABLE
@@ -157,7 +169,7 @@ CREATE INDEX
 CREATE TABLE
 ……省略……
 
-template1-# \i images.sql
+zabbix=> \i images.sql
 INSERT 0 1
 INSERT 0 1
 INSERT 0 1
@@ -165,7 +177,7 @@ INSERT 0 1
 INSERT 0 1
 ……省略……
 
-template1-# \i data.sql
+zabbix=>  \i data.sql
 START TRANSACTION
 INSERT 0 4
 INSERT 0 1
@@ -175,6 +187,10 @@ zabbix=# \q # 退出
 $ exit # 退出数据库用户
 root@ykla:~ # # 回来了
 ```
+
+### 参考文献
+
+- [PostgreSQL15 Public Schema没有权限问题解决](https://showme.codes/zh-cn/2024-01-01-postgresql15-public-schema-permission/)
 
 ## 设置 Zabbix
 
