--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -65,7 +65,7 @@ psql (PostgreSQL) 16.8
 zabbix7-frontend 是 web 控制前端。
 
 ```
-# pkg ins zabbix7-frontend-php84
+# pkg ins zabbix7-frontend-php83
 ```
 上述安装过程会自动安装 PHP，本文中安装的版本是 PHP8.4，具体可用版本可以到 [zabbix7-frontend](https://www.freshports.org/net-mgmt/zabbix7-frontend) 看一下。
 
@@ -82,14 +82,14 @@ zabbix7-frontend 是 web 控制前端。
 注意 PHP 版本：
 
 ```
-# pkg ins php84-pdo_pgsql php84-pgsql
+# pkg ins php83-pdo_pgsql php83-pgsql
 ```
 
 或
 
 ```
-# cd /usr/ports/databases/php84-pdo_pgsql/ && make install clean
-# cd /usr/ports/databases/php84-pgsql/ && make install clean
+# cd /usr/ports/databases/php83-pdo_pgsql/ && make install clean
+# cd /usr/ports/databases/php83-pgsql/ && make install clean
 ```
 
 
@@ -340,4 +340,10 @@ listen.mode = 0660
 # service zabbix_agentd start
 ```
 
+## 登录
 
+
+Zabbix 的默认用户名和密码如下：
+
+- 用户名: `Admin`
+- 密码: `zabbix`
