--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -288,7 +288,7 @@ http {
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_path_info;
       fastcgi_param REMOTE_USER $remote_user;
-      fastcgi_pass   127.0.0.1:9000;
+      fastcgi_pass unix:/var/run/php-fpm.sock;
       fastcgi_index index.php;
       include fastcgi_params;
     }
@@ -315,6 +315,8 @@ listen.owner = www
 listen.group = www
 listen.mode = 0660
 ```
+
+找到 `listen = 127.0.0.1:9000` 修改为 `listen = "/var/run/php-fpm.sock"`
 
 ### 编辑 `/usr/local/etc/php.ini-production`
 
