--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -221,6 +221,7 @@ LogFile=/var/log/zabbix/zabbix_agentd.log
 SourceIP=127.0.0.1
 Server=127.0.0.1
 ServerActive=127.0.0.1
+Hostname=ykla
 ```
 
 ## 配置 Zabbix 前端
