--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -15,18 +15,16 @@ pkg 安装会安装多余的 MySQL，故使用 Ports 安装。
 
 按如图配置，选中 `PGSQL` 后按回车键：
 
-
-Ports 安装太慢，直接 pkg 补全缺失的依赖（国内镜像站可能会报错）：
-
-```sh
-# make install-missing-packages
-```
-
-编译 zabbix7-server：
-
 ```
 # make install clean
 ```
+
+或使用 pkg：
+
+```
+# pkg ins zabbix7-server
+```
+
 
 ### 安装 PostgreSQL
 
@@ -67,7 +65,8 @@ zabbix7-frontend 是 web 控制前端。
 ```
 # pkg ins zabbix7-frontend-php83
 ```
-上述安装过程会自动安装 PHP，本文中安装的版本是 PHP8.4，具体可用版本可以到 [zabbix7-frontend](https://www.freshports.org/net-mgmt/zabbix7-frontend) 看一下。
+
+上述安装过程会自动安装 PHP，本文中安装的版本是 PHP8.3（写作本文时 PHP8.4 会报错），具体可用版本可以到 [zabbix7-frontend](https://www.freshports.org/net-mgmt/zabbix7-frontend) 看一下。
 
 或者：
 
@@ -289,7 +288,7 @@ http {
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_path_info;
       fastcgi_param REMOTE_USER $remote_user;
-      fastcgi_pass unix:/var/run/php-fpm.sock;
+      fastcgi_pass   127.0.0.1:9000;
       fastcgi_index index.php;
       include fastcgi_params;
     }
@@ -298,26 +297,6 @@ http {
 ```
 
 ## 配置 PHP
-
-### 编辑 `/usr/local/etc/php-fpm.d/www.conf`
-
-取消注释以下行，将
-
-```ini
-;listen.owner = www
-;listen.group = www
-;listen.mode = 0660
-```
-
-修改为
-
-```ini
-listen.owner = www
-listen.group = www
-listen.mode = 0660
-```
-
-找到 `listen = 127.0.0.1:9000` 修改为 `listen = "/var/run/php-fpm.sock"`
 
 ### 编辑 `/usr/local/etc/php.ini-production`
 
