--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -6,7 +6,7 @@
 
 zabbix7-server 是服务器端。负责接收、处理监控数据，应运行在监控服务器上。
  
-pkg 安装会安装多余的 MySQL，故使用 Ports 安装。
+pkg 安装会安装多余的 MySQL（且会捆绑死），故使用 Ports 安装。
 
 ```
 # cd /usr/ports/net-mgmt/zabbix7-server/ 
@@ -19,42 +19,21 @@ pkg 安装会安装多余的 MySQL，故使用 Ports 安装。
 # make install clean
 ```
 
-或使用 pkg：
-
-```
-# pkg ins zabbix7-server
-```
-
 
 ### 安装 PostgreSQL
 
-通过 Port 安装的 zabbix7-server 会自动安装 PostgreSQL 客户端。
-
-否则 
-
-```
-# pkg install postgresql16-client
-```
-
-
-查看版本：
-
-```
-root@ykla:/ # psql --version
-psql (PostgreSQL) 16.8
-```
 
 安装：
 
 ```
-# pkg install postgresql16-server
+# pkg install postgresql16-server postgresql16-client
 ```
 
 或
 
 ```
-# cd /usr/ports/databases/postgresql16-server/ 
-# make install clean
+# cd /usr/ports/databases/postgresql16-server/ && make install clean
+# cd /usr/ports/databases/postgresql16-client/ && make install clean
 ```
 
 
@@ -76,7 +55,7 @@ zabbix7-frontend 是 web 控制前端。
 ```
 
 
-## PDO
+## Pdo
 
 注意 PHP 版本：
 
@@ -145,7 +124,7 @@ template1=# create database zabbix; # 创建 zabbix 数据库
 CREATE DATABASE
 template1=# CREATE USER zabbix WITH PASSWORD 'z'; # 此处设置用户 zabbix 密码为 z
 CREATE ROLE
-postgres=# GRANT USAGE, CREATE on SCHEMA PUBLIC to zabbix;
+postgres=# GRANT USAGE, CREATE on SCHEMA PUBLIC to zabbix; #  授权
 GRANT
 postgres=# GRANT ALL PRIVILEGES ON DATABASE zabbix TO zabbix; # 在授予用户 zabbix 对 zabbix 数据库有所有权限
 GRANT
@@ -159,8 +138,11 @@ postgres=# \q
 必须退出再继续：
 
 ```
-$ psql -U zabbix zabbix # 使用用户账户 zabbix 登录到数据库 zabbix
-$ zabbix=> \i schema.sql # 导入数据库，下同
+$  psql -U zabbix zabbix # 使用用户账户 zabbix 登录到数据库 zabbix
+psql (16.8, server 16.7)
+Type "help" for help.
+
+zabbix=> \i schema.sql # 导入数据库，下同
 CREATE TABLE
 CREATE INDEX
 CREATE TABLE
