--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -1,8 +1,8 @@
 # 第 17.15 节 Zabbix 监控（基于 PostgreSQL）
 
-## 安装 
 
-### 安装 zabbix7-server
+
+## 安装 zabbix7-server
 
 zabbix7-server 是服务器端。负责接收、处理监控数据，应运行在监控服务器上。
  
@@ -20,7 +20,7 @@ pkg 安装会安装多余的 MySQL（且会捆绑死），故使用 Ports 安装
 ```
 
 
-### 安装 PostgreSQL
+## 安装 PostgreSQL
 
 
 安装：
