--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -311,3 +311,28 @@ Zabbix 的默认用户名和密码如下：
 
 - 用户名: `Admin`
 - 密码: `zabbix`
+
+![](../.gitbook/assets/Zabbix1.png)
+
+
+
+
+
+## 配置中文
+
+![](../.gitbook/assets/Zabbix2.png)
+
+
+![](../.gitbook/assets/Zabbix3.png)
+
+![](../.gitbook/assets/Zabbix4.png)
+
+## 待解决
+
+- 中文乱码
+- 监控项不全
+- HTTP 等安全设置
+
+## 参考文献
+
+- [Monitor Your Hosts with Zabbix](https://freebsdfoundation.org/our-work/journal/browser-based-edition/networking-10th-anniversary/practical-ports-monitor-your-hosts-with-zabbix/)
