--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -173,7 +173,7 @@ root@ykla:~ # # 回来了
 
 - [PostgreSQL15 Public Schema没有权限问题解决](https://showme.codes/zh-cn/2024-01-01-postgresql15-public-schema-permission/)
 
-## 设置 Zabbix
+## 设置 Zabbix Server
 
 Zabbix 的主要配置文件位于 `/usr/local/etc/zabbix7/zabbix_server.conf`。
 
