--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -13,6 +13,8 @@ pkg 安装会安装多余的 MySQL（且会捆绑死），故使用 Ports 安装
 # make config
 ```
 
+![](../.gitbook/assets/Zabbix.png)
+
 按如图配置，选中 `PGSQL` 后按回车键：
 
 ```sh
