--- a/di-19-zhang-wen-xue-gu-shi/di-19.2.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.2.md
@@ -12,7 +12,7 @@
 
 本文将聚焦于加州大学伯克利分校的校训“Fiat Lux”（Let There Be Light，要有光），Fiat Lux 还可以翻译为“让世界充满光明”。加州大学伯克利分校的许多奖项都以“Fiat Lux”为名。
 
-加州大学伯克利分校建立于 1868 年，是一所公立大学。在这一年，代表中国近代第一所国立大学的北京大学校长蔡元培出生了，蔡元培认为“要有良好的社会，必先有良好的个人，要有良好的个人，就要先有良好的教育。”与 Fiat Lux 提倡的以个人带动社会进步的观点类似，他被尊为北大“永远的校长”；日本开始明治维新，带领日本迈入新时代，从此日本进入了现代化，光影随行，这也为日本将来的侵略战争埋下了种子。
+加州大学伯克利分校建立于 1868 年，是一所公立大学。在这一年，代表中国近代第一所国立大学的北京大学校长蔡元培出生了，与 Fiat Lux 提倡的以个人带动社会进步的观点类似，蔡元培认为“要有良好的社会，必先有良好的个人，要有良好的个人，就要先有良好的教育。”他被尊为北大“永远的校长”；日本开始明治维新，带领日本迈入新时代，从此日本进入了现代化，光影随行，这也为日本将来的侵略战争埋下了种子。
 
 Fiat Lux 出自拉丁文圣经“1.3：Dixitque Deus : Fiat lux. Et facta est lux.”（圣经武加大译本）。“And God said, "1.3: Let there be light, and there was light.”（NIV 版圣经）“1.3：神说、要有光、就有了光。”（《和合本圣经》）
 
