--- a/di-19-zhang-wen-xue-gu-shi/di-19.2.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.2.md
@@ -18,7 +18,7 @@ Fiat Lux 出自拉丁文圣经“1.3：Dixitque Deus : Fiat lux. Et facta est lu
 
 可见，是先有的光，才有的世界。在基督教神学中，上帝先于世人创造了光，如同真理之光照耀着世人，亦是人类理性的来源。
 
-用作校训，Fiat Lux 意味着用知识启蒙世人。正如柏拉图的光照说一样，知识就像太阳照耀着世界，驱散无知的黑暗。这代表着学生要用知识改造世界，祛除灰暗。然而，光明所至，亦必阴影随行。尼采指出，“与恶龙缠斗过久，自身亦成为恶龙；凝视深渊过久，深渊将回以凝视”此校训也时刻警醒着学生要注意自己和周遭的环境，不要重蹈苏格拉底的覆辙——苏格拉底试图让每个人承认自己实际上一无所知，只拥有意见而非真理——这与老子《道德经》言“光而不耀，静水流深。”有异曲同工之妙。这警醒人们，避免走入政治的泥淖。然而在美国过度强调政治正确的今天，加州大学伯克利分校图书馆甚至摘除了贝克莱的画像（贝克莱曾购买过奴隶）。而伯克利分校（UC Berkeley）之名正源自贝克莱（Berkeley）。这与其一贯追求的理念背道而驰。
+用作校训，Fiat Lux 意味着用知识启蒙世人。正如柏拉图的光照说一样，知识就像太阳照耀着世界，驱散无知的黑暗。这代表着学生要用知识改造世界，祛除灰暗。然而，光明所至，亦必阴影随行。尼采指出，“与恶龙缠斗过久，自身亦成为恶龙；凝视深渊过久，深渊将回以凝视”此校训也时刻警醒着学生要注意自己和周遭的环境，不要重蹈苏格拉底的覆辙——苏格拉底试图让每个人承认自己实际上一无所知，只拥有意见而非真理——这与老子《道德经》言“光而不耀，静水流深。”有异曲同工之妙。这警醒人们，避免走入政治的泥淖。然而在美国过度强调政治正确的今天，加州大学伯克利分校图书馆甚至摘除了贝克莱的画像（贝克莱曾购买过奴隶）。而伯克利分校（UC Berkeley）之名正源自贝克莱（Berkeley）。这与其一贯追求的自由理念背道而驰，亦违背了儒家孔子的名正思想：“名不正，则言不顺；言不顺，则事不成；”
 
 现代科学对光的认识也是异常曲折，研究表明，光同时显现出了波动性和粒子性。科学对光的研究范式一直在不断地改变，Fiat Lux 的精神也因时而异。在创校之初，创始人旨在让伯克利成为教育灯塔；而如今，旨在让学生散为满天星。
 
