--- a/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.15-Zabbix.md
@@ -325,7 +325,15 @@ Zabbix 的默认用户名和密码如下：
 
 ![](../.gitbook/assets/Zabbix4.png)
 
-## 待解决
+## 故障排除
+
+### 日志
+
+- 代理：`/var/log/zabbix/zabbix_agentd.log`
+- 服务器端：`/var/log/zabbix/zabbix_server.log`
+- PHP 相关错误：`/var/log/nginx/error.log`
+
+### 待解决
 
 - 中文乱码
 - 监控项不全
