--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -487,6 +487,185 @@ Done in 109.27s.
 
 
 ```
-su -l git -c "cd /usr/local/www/gitlab && RAILS_ENV=production NODE_ENV=production USE_DB=false SKIP_STORAGE_VALIDATION=true bundle exec rake gitlab:assets:compile"
+# su -l git -c "cd /usr/local/www/gitlab && RAILS_ENV=production NODE_ENV=production USE_DB=false SKIP_STORAGE_VALIDATION=true bundle exec rake gitlab:assets:compile"
+```
+
+- 移除数据库超级管理员
+
+```sh
+root@ykla:/ # psql -d template1 -U postgres -c "ALTER USER git WITH NOSUPERUSER;"
+ALTER ROLE
+```
+
+- 启动 Gitlab
+
+```sh
+# service gitlab start
+
+……省略……
+
+Started in 45s.
+The GitLab web server with pid 8202 is running.
+The GitLab Sidekiq job dispatcher with pid 8212 is running.
+The GitLab Workhorse with pid 8216 is running.
+Gitaly with pid 8218 is running.
+GitLab and all its components are up and running.
+
+```
+
+## Nginx
+
+### 安装：
+
+```sh
+# pkg install nginx
+```
+
+或者：
+
+```
+# cd /usr/ports/www/nginx/ 
+# make install clean
+```
+
+### 配置 `/usr/local/etc/nginx/nginx.conf`
+
+编辑 `/usr/local/etc/nginx/nginx.conf`，找到
+
+```ini
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+```
+
+修改如下：
+
+```ini
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    include       /usr/local/www/gitlab/lib/support/nginx/gitlab; # 加入此行
+```
+
+## 配置服务
+
+```
+root@ykla:/ # service nginx enable
+nginx enabled in /etc/rc.conf
+root@ykla:/ #  service nginx start
+Performing sanity check on nginx configuration:
+nginx: the configuration file /usr/local/etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
+Starting nginx.
+```
+
+## 配置 Gitlab Pages
+
+```
+root@ykla:/ # su -l git -c "openssl rand -base64 32 > /usr/local/www/gitlab/.gitlab_pages_secret"
+root@ykla:/ # chmod 640 /usr/local/www/gitlab/.gitlab_pages_secret
+root@ykla:/ # chgrp gitlab-pages /usr/local/www/gitlab/.gitlab_pages_secret
+```
+
+### 启动服务
+
+```
+# sysrc gitlab_pages_enable="YES"
+# service gitlab_pages start
+```
+
+## 检查配置
+
+```sh
+root@ykla:/ # su -l git -c "cd /usr/local/www/gitlab && rake gitlab:check RAILS_ENV=production"
+Checking GitLab subtasks ...
+
+Checking GitLab Shell ...
+
+GitLab Shell: ... GitLab Shell version >= 14.39.0 ? ... OK (14.39.0)
+Running /usr/local/share/gitlab-shell/bin/gitlab-shell-check
+Internal API available: OK
+Redis available via internal API: OK
+gitlab-shell self-check successful
+
+Checking GitLab Shell ... Finished
+
+Checking Gitaly ...
+
+Gitaly: ... default ... OK
+
+Checking Gitaly ... Finished
+
+Checking Sidekiq ...
+
+Sidekiq: ... Running? ... yes
+Number of Sidekiq processes (cluster/worker) ... 1/1
+
+Checking Sidekiq ... Finished
+
+Checking Incoming Email ...
+
+Incoming Email: ... Reply by email is disabled in config/gitlab.yml
+
+Checking Incoming Email ... Finished
+
+Checking LDAP ...
+
+LDAP: ... LDAP is disabled in config/gitlab.yml
+
+Checking LDAP ... Finished
+
+Checking GitLab App ...
+
+Database config exists? ... yes
+Tables are truncated? ... skipped
+All migrations up? ... yes
+Database contains orphaned GroupMembers? ... no
+GitLab config exists? ... yes
+GitLab config up to date? ... yes
+Cable config exists? ... yes
+Resque config exists? ... yes
+Log directory writable? ... yes
+Tmp directory writable? ... yes
+Uploads directory exists? ... yes
+Uploads directory has correct permissions? ... yes
+Uploads directory tmp has correct permissions? ... skipped (no tmp uploads folder yet)
+Systemd unit files or init script exist? ... no
+  Try fixing it:
+  Install the Service
+  For more information see:
+  doc/install/installation.md in section "Install the Service"
+  Please fix the error above and rerun the checks.
+Systemd unit files or init script up-to-date? ... can't check because of previous errors
+Projects have namespace: ... can't check, you have no projects
+Redis version >= 6.2.14? ... yes
+Ruby version >= 3.0.6 ? ... yes (3.2.7)
+Git user has default SSH configuration? ... yes
+Active users: ... 1
+Is authorized keys file accessible? ... no
+Trying to fix error automatically. ...Success
+GitLab configured to store new projects in hashed storage? ... yes
+All projects are in hashed storage? ... yes
+Elasticsearch version 7.x-8.x or OpenSearch version 1.x ... skipped (Advanced Search is disabled)
+All migrations must be finished before doing a major upgrade ... skipped (Advanced Search is disabled)
+
+Checking GitLab App ... Finished
+
+
+Checking GitLab subtasks ... Finished
+```
+
+```
+service gitlab restart
+```
+
+```
+root@ykla:/ # service gitlab status
+The GitLab web server with pid 8202 is running.
+The GitLab Sidekiq job dispatcher with pid 8212 is running.
+The GitLab Workhorse with pid 8216 is running.
+Gitaly with pid 8218 is running.
+GitLab and all its components are up and running.
 ```
 
